remove height auto on small screens - Samsung fix

--- a/assets/scss/organisms/single-publication/_related-publications.scss
+++ b/assets/scss/organisms/single-publication/_related-publications.scss
@@ -72,7 +72,6 @@
 
                 .image img {
                     @include breakpoint(medium down) {
-                        height: auto;
                         min-height: 0;
                         max-height: 400px;
                     }
